; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_29810.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_29810.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"NtCreateMutant\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"ZwCreateMutant\00", align 1
@FALSE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [12 x i8] c"NtOpenEvent\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"ZwOpenEvent\00", align 1
@.str.4 = private unnamed_addr constant [70 x i8] c"\0AI do not know how to exploit the vulnerability using this function.\0A\00", align 1
@.str.5 = private unnamed_addr constant [15 x i8] c"\0ATEST FAILED!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %10 = call i32 (...) @about()
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 2
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = call i32 (...) @usage()
  store i32 1, i32* %3, align 4
  br label %51

15:                                               ; preds = %2
  %16 = load i8**, i8*** %5, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 1
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @stricmp(i8* %18, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %15
  %22 = load i8**, i8*** %5, align 8
  %23 = getelementptr inbounds i8*, i8** %22, i64 1
  %24 = load i8*, i8** %23, align 8
  %25 = call i32 @stricmp(i8* %24, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %31, label %27

27:                                               ; preds = %21, %15
  %28 = call i32 @InitializeObjectAttributes(i32* %7, i32 1, i32 0, i32* null, i32* null)
  %29 = load i32, i32* @FALSE, align 4
  %30 = call i32 @ZwCreateMutant(i32* %6, i32 0, i32* %7, i32 %29)
  br label %49

31:                                               ; preds = %21
  %32 = load i8**, i8*** %5, align 8
  %33 = getelementptr inbounds i8*, i8** %32, i64 1
  %34 = load i8*, i8** %33, align 8
  %35 = call i32 @stricmp(i8* %34, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %31
  %38 = load i8**, i8*** %5, align 8
  %39 = getelementptr inbounds i8*, i8** %38, i64 1
  %40 = load i8*, i8** %39, align 8
  %41 = call i32 @stricmp(i8* %40, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0))
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %46, label %43

43:                                               ; preds = %37, %31
  %44 = call i32 @InitializeObjectAttributes(i32* %9, i32 1, i32 0, i32* null, i32* null)
  %45 = call i32 @ZwOpenEvent(i32* %8, i32 0, i32* %9)
  br label %48

46:                                               ; preds = %37
  %47 = call i32 @printf(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.4, i64 0, i64 0))
  br label %48

48:                                               ; preds = %46, %43
  br label %49

49:                                               ; preds = %48, %27
  %50 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %51

51:                                               ; preds = %49, %13
  %52 = load i32, i32* %3, align 4
  ret i32 %52
}

declare dso_local i32 @about(...) #1

declare dso_local i32 @usage(...) #1

declare dso_local i32 @stricmp(i8*, i8*) #1

declare dso_local i32 @InitializeObjectAttributes(i32*, i32, i32, i32*, i32*) #1

declare dso_local i32 @ZwCreateMutant(i32*, i32, i32*, i32) #1

declare dso_local i32 @ZwOpenEvent(i32*, i32, i32*) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
